--- a/portfolio.html
+++ b/portfolio.html
@@ -383,14 +383,12 @@
               placeholder="E-mail"
             />
           </div>
-          <div class="subscription-btn">
-            <button class="subscription button" type="submit">
-              Подписаться
-            </button>
-            <svg class="subscription-icon" width="24px" height="24px">
+          <button class="subscription button" type="submit">
+            <span class="sub-span">Подписаться</span
+            ><svg class="subscription-icon" width="24px" height="24px">
               <use href="./images/symbol-defs.svg#icon-icon-send"></use>
             </svg>
-          </div>
+          </button>
         </form>
       </div>
     </footer>
